[tool.poetry]
name = "acc-registration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
setuptools = "^71.0.4"
requests = "^2.32.3"
twilio = "^9.2.3"
pydantic-extra-types = "^2.9.0"
phonenumbers = "^8.13.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
